# Mailing-app

./: .env  .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
mail_flow/: admin.py  apps.py  forms.py  mixsins.py  models.py  services.py  urls.py  views.py
mail_flow/migrations/: 0001_initial.py  0002_alter_mailing_end_time_alter_mailing_start_time_and_more.py  0003_alter_mailing_message_alter_mailing_start_time_and_more.py  0004_mailing_owner_mailingattempt_owner_message_owner_and_more.py  0005_remove_mailingattempt_owner_alter_recipient_email_and_more.py  0006_alter_mailing_options_alter_message_options.py  0007_mailing_is_active.py  0008_alter_recipient_options.py
mail_flow/templates/: block_user.html  mailing_attempt_success.html  mailing_confirm_delete.html  mailing_form.html  mailings_list.html  main.html  message_confirm_delete.html  message_form.html  messages_list.html  recipient_confirm_delete.html  recipient_form.html  recipients_list.html  reports.html  users_list.html
static/css/: styles.css
templates/: base.html
templates/account/: email_confirm.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  verification_sent.html
templates/menus/: menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_alter_customuser_is_active.py  0004_customuser_is_blocked.py  0005_alter_customuser_options.py
users/templates/: blocked_page.html  login.html  profile_detail.html  register.html  (+1 more)
(+2 files in other folders)
